<resources>
    <string name="app_name">DesafioAndroid</string>
    <string name="Destination_Date">Ida: 07/08/2025 - Volta: 18/08/2025 | 3 passageiro(s)</string>
    <string name="Destination_Location">GRU - RIO</string>
    <string name="button_details">Button Details</string>
    <string name="Flights">Voos</string>
    <string name="Flight_To">Voo para RIO</string>
    <string name="back_button">Back button</string>
    <string name="txt_description_btn_back">Botão de voltar</string>
    <string name="txt_description_arrow">Setas</string>
    <string name="return_flight_date">Volta: 29/07/2029</string>
    <string name="departure_flight_date">Ida: 25/07/2029</string>
    <string name="txt_arrival_location">RIO</string>
    <string name="txt_departure_location">GRU</string>
    <string name="txt_passangers">Passageiros | Capacidade: 2</string>
    <string name="txt_crew">Tripulação</string>
    <string name="txt_pilot">Manuela - Piloto</string>
    <string name="txt_commissioner">Luis - Comissário</string>
    <string name="txt_copilot">Joaquim - Co-Piloto</string>
    <string name="txt_btn_back">Voos</string>
    <string name="arrows_descriptions">Figura de Setas dos voos</string>
    <string name="add_button_description">Botão de Adicionar Voo</string>
    <string name="departure_location">Local de Partida</string>
    <string name="arrival_destiny">Local de Destino</string>
    <string name="arrival_icon">Ícone de destino</string>
    <string name="departure_icon">Ícone de Partida</string>
    <string name="new_flight">Novo voo</string>
    <string name="calendar_icon">Ícone de Calendário</string>
    <string name="departure_date">Data de Partida</string>
    <string name="return_date">Data de Volta</string>
    <string name="add_passenger_icon">Ícone para adicionar passageiros</string>
    <string name="capacity_flight">Capacidade do Voo</string>
</resources>