<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_flight">
    
    
    <TextView
        android:id="@+id/txt_flightTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Flight_To"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
    
    <ImageView
        android:id="@+id/btn_back_flight"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/baseline_keyboard_arrow_left_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_flightTo"
        android:contentDescription="@string/txt_description_btn_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Voos"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/btn_back_flight"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back_flight"
        app:layout_constraintTop_toTopOf="@+id/btn_back_flight"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_details_flight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_corner"
        android:paddingTop="30dp"
        android:paddingBottom="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_flightTo">

        <TextView
            android:id="@+id/txt_departure_flight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_departure_location"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/left_right_arrows"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/left_right_arrows"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/left_right_arrows"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_arrival_location"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/left_right_arrows"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/txt_departure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure_flight_date"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_right_arrows"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_flight_date"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_departure_date"

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_passangers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:paddingTop="30dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@+id/card_details_flight">

        <TextView
            android:id="@+id/txt_passangers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/txt_passangers"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="João"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_passangers"
            android:paddingStart="15dp"
            android:layout_marginTop="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Maria"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/txt_name1"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="15dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_tripulate_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner"
        android:paddingTop="30dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@+id/card_passangers">

        <TextView
            android:id="@+id/txt_crew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:text="@string/txt_crew"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <TextView
            android:id="@+id/txt_pilot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_pilot"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_crew"
            android:paddingStart="15dp"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/txt_co_pilot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_copilot"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/txt_pilot"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_commissioner"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/txt_co_pilot"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingStart="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>