<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="15dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <View
        android:layout_width="0dp"
        android:layout_height="0.80dp"
        android:background="@color/color_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/flight_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Destination_Location"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="11dp"/>


    <TextView
        android:id="@+id/flight_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Destination_Date"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flight_route"
        android:paddingBottom="11dp"/>
    
    <ImageView
        android:id="@+id/arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_keyboard_arrow_right_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flight_details"
        android:contentDescription="@string/button_details"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0.80dp"
        android:background="@color/color_line"
        app:layout_constraintTop_toBottomOf="@id/flight_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>